			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Bug#233 Compilation error in single-threaded mode.  Keri Harris.

==================================
VERSION 5.6.23 (November 10, 2006)
==================================

  * PORT: Allow building 32-bit version on 64-bits Linux.

  * PORT: By default build shared object on x86_64-linux platforms.  Needed
    for embedding in Java and unlike IA32, creating a shared object does not
    affect performance.

  * ADDED: collation_key/2 and locale_sort/2 for locale-dependent ordering.
    With help from Pierre Nugues and Richard O'Keefe.

  * MODIFIED: Initialisation initialises the LC_COLLATE locale.

  * MODIFIED: Moved predsort/3, merge/3 and merge_set/3 to new library(sort).
    Applications not relying on autoloading must update use_module declarations
    if one of these predicates is used. 

  * ENHANCED: Check file-descriptor in Sfdopen(). Julien Olivain.

  * ADDED: debugger event for finished threads.

  * FIXED: Avoid history expansion on ..., !.  Kimberly Voll.

  * FIXED: negative shift.  Roberto Bagnara.

  * FIXED: Possible crash in recompilation if another thread is doing
    GC.  Mike Elston.

=================================
VERSION 5.6.22 (October 17, 2006)
=================================

  * FIXED: Bug#227: meta-declaration of with_output_to/2.  Holger
    Kanwischer.

  * FIXED: Bug#223: Read of large non-decimal negative numbers.  
    Marius Filip.

  * FIXED: absolute_file_name/3 to honour tests for file_type(directory)
    and demand files of other types *not* to be a directory.

  * FIXED: Support Unicode in windows open_shared_object/2, underlying
    load_foreign_library/1.  Maria Sergeeva.

  * FIXED: Support Unicode in Windows environment strings, setenv/2