@@ -7,6 +7,11 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Possible crash in file-name canonisation.  Roberto Bagnara.
+    SECURITY: This is used by absolute_file_name/[2,3], which is adviced
+    for path-name validation in web-servers.  Makes DoS attacks possible.
+    Unclear whether or not the bug is exploitable aotherwise.
+
   * FIXED: Bug#233 Compilation error in single-threaded mode.  Keri Harris.
 
 ==================================
